--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,26 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
+  position: relative;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-bg {
+  width: inherit;
+  height: inherit;
+  background-image: url(https://images.unsplash.com/photo-1514575619841-1a3d949d3277?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=582&q=80);
+  background-size: cover;
+  transition: 0.1s filter ease-in;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Box {
+  width: 100px;
+  height: 100px;
+  background: linear-gradient(to bottom, #f2f2ff, #ffffff);
+  border-radius: 15%;
+  position: absolute;
+  z-index: 100;
+  display: block;
+  align-self: center;
 }
