--- a/src/App.css
+++ b/src/App.css
@@ -9,18 +9,46 @@
 .App-bg {
   width: inherit;
   height: inherit;
-  background-image: url(https://images.unsplash.com/photo-1514575619841-1a3d949d3277?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=582&q=80);
+  background-image: url(https://images.unsplash.com/photo-1536401571074-346832ba9458?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1905&q=80);
   background-size: cover;
   transition: 0.1s filter ease-in;
+  position: absolute;
 }
 
-.Box {
-  width: 100px;
-  height: 100px;
-  background: linear-gradient(to bottom, #f2f2ff, #ffffff);
-  border-radius: 15%;
-  position: absolute;
-  z-index: 100;
-  display: block;
+.Container {
   align-self: center;
+  z-index: 10;
+  position: absolute;
+  width: 80vw;
+  height: 25vh;
+  transform-origin: top right;
+}
+
+.Box.Front {
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  border-radius: 14px;
+  z-index: 100;
+  position: absolute;
+}
+.Box.Middle {
+  width: 100%;
+  height: 100%;
+  background: #c2c2c2;
+  border-radius: 14px;
+  z-index: 90;
+  position: absolute;
+  margin-top: -18px;
+  scale: 0.92;
+}
+.Box.Back {
+  width: 100%;
+  height: 100%;
+  background: #a5a5a5;
+  border-radius: 14px;
+  z-index: 80;
+  position: absolute;
+  margin-top: -36px;
+  scale: 0.84;
 }
