--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,8 @@
 .App-bg {
   width: inherit;
   height: inherit;
-  background-image: url(https://images.unsplash.com/photo-1536401571074-346832ba9458?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1905&q=80);
+  background-image: url(https://images.unsplash.com/photo-1528044166082-4159f1209b3a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1952&q=80);
+  /* background-image: url(https://images.unsplash.com/photo-1536401571074-346832ba9458?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1905&q=80); */
   background-size: cover;
   transition: 0.1s filter ease-in;
   position: absolute;
@@ -24,10 +25,14 @@
   transform-origin: top right;
 }
 
+.Box {
+  mix-blend-mode: hard-light;
+}
+
 .Box.Front {
   width: 100%;
   height: 100%;
-  background: #ffffff;
+  background: #f2f2f2;
   border-radius: 14px;
   z-index: 100;
   position: absolute;
@@ -35,7 +40,7 @@
 .Box.Middle {
   width: 100%;
   height: 100%;
-  background: #c2c2c2;
+  background: #d2d2d2;
   border-radius: 14px;
   z-index: 90;
   position: absolute;
@@ -45,7 +50,7 @@
 .Box.Back {
   width: 100%;
   height: 100%;
-  background: #a5a5a5;
+  background: #b2b2b2;
   border-radius: 14px;
   z-index: 80;
   position: absolute;
